@@ -1,4 +1,4 @@
-Vöröskúti határsor 34
-Vöröskúti határsor 36*
-Vöröskúti határsor 12
-Vöröskúti határsor 2
+Vöröskúti határsor	34
+Vöröskúti határsor	36*
+Vöröskúti határsor	12
+Vöröskúti határsor	2
