@@ -1,13 +1,13 @@
-Hamzsabégi út 1
-Ref Name 1 1
-Ref Name 1 2
-Törökugrató utca 1
-Törökugrató utca 10
-Törökugrató utca 11
-Törökugrató utca 12
-Törökugrató utca 2
-Törökugrató utca 7
-Tűzkő utca 1
-Tűzkő utca 10
-Tűzkő utca 2
-Tűzkő utca 9
+Hamzsabégi út	1
+Ref Name 1	1
+Ref Name 1	2
+Törökugrató utca	1
+Törökugrató utca	10
+Törökugrató utca	11
+Törökugrató utca	12
+Törökugrató utca	2
+Törökugrató utca	7
+Tűzkő utca	1
+Tűzkő utca	10
+Tűzkő utca	2
+Tűzkő utca	9
