@@ -1,3 +1,3 @@
-Kalotaszeg utca 25
-Kalotaszeg utca 27-37
-Kalotaszeg utca 31*
+Kalotaszeg utca	25
+Kalotaszeg utca	27-37
+Kalotaszeg utca	31*
