@@ -1,2 +1,2 @@
-Királyleányka utca 10 A
-Királyleányka utca 10 B
+Királyleányka utca	10 A
+Királyleányka utca	10 B
