@@ -1,3 +1,3 @@
-Rétköz utca 9
-Rétköz utca 9/A
-Rétköz utca 9 A 1
+Rétköz utca	9
+Rétköz utca	9/A
+Rétköz utca	9 A 1
