@@ -1,1 +1,1 @@
-Bártfai utca 52/B*
+Bártfai utca	52/B*
