@@ -1,4 +1,4 @@
-Albert utca 43/A
-Albert utca 43/B
-Albert utca 43/C
-Albert utca 43/D
+Albert utca	43/A
+Albert utca	43/B
+Albert utca	43/C
+Albert utca	43/D
