@@ -1,5 +1,10 @@
 = Changelog
 
+== 2019-12-27
+
+- <https://github.com/vmiklos/osm-gimmisn/issues/312> support street names where one name is a
+  prefix of the other one.
+
 == 2019-12-21
 
 - <https://github.com/vmiklos/osm-gimmisn/issues/303> ';' separator can be now used in combination
